Screen design added Button :hover, :active events added.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
   <body>
     <div class="calc-body">
       <div class="screen">
-        <div class="history"><span class="left"></span><span class="right"></span></div>
-        <div id="active"></div>
+        <div class="input-area">
+          <div id="active">TextHere</div>
+          <div id="warn">Warning</div>
+        </div>
+        <div class="history">
+          <span class="left">test</span><span class="right"><span>=</span><span>test</span></span>
+        </div>
       </div>
       <div class="buttons">
         <button id="one" class="number">1</button>
