JS for buttons / input, add button values

--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
         </div>
       </div>
       <div class="buttons">
-        <button id="one" class="number">1</button>
-        <button id="two" class="number">2</button>
-        <button id="three" class="number">3</button>
-        <button id="four" class="number">4</button>
-        <button id="five" class="number">5</button>
-        <button id="six" class="number">6</button>
-        <button id="seven" class="number">7</button>
-        <button id="eight" class="number">8</button>
-        <button id="nine" class="number">9</button>
-        <button id="zero" class="number">0</button>
-        <button id="period" class="number">.</button>
-        <button id="multiply" class="operator">*</button>
-        <button id="divide" class="operator">/</button>
-        <button id="subtract" class="operator">&#8722</button>
-        <button id="add" class="operator">+</button>
-        <button id="mod" class="operator">%</button>
-        <button id="parenopen" class="operator">(</button>
-        <button id="parenclose" class="operator">)</button>
-        <button id="superscript" class="operator"><em>x<sup>n</sup></em></button>
-        <button id="equals" class="operator">=</button>
-        <button id="delete" class="operator"><i class="fas fa-backspace"></i></button>
-        <button id="clear" class="operator">C</button>
+        <button id="one" class="number" value="1">1</button>
+        <button id="two" class="number" value="2">2</button>
+        <button id="three" class="number" value="3">3</button>
+        <button id="four" class="number" value="4">4</button>
+        <button id="five" class="number" value="5">5</button>
+        <button id="six" class="number" value="6">6</button>
+        <button id="seven" class="number" value="7">7</button>
+        <button id="eight" class="number" value="8">8</button>
+        <button id="nine" class="number" value="9">9</button>
+        <button id="zero" class="number" value="0">0</button>
+        <button id="period" class="number" value=".">.</button>
+        <button id="multiply" class="operator" value="*">*</button>
+        <button id="divide" class="operator" value="/">/</button>
+        <button id="subtract" class="operator" value="-">&#8722</button>
+        <button id="add" class="operator" value="+">+</button>
+        <button id="mod" class="operator" value="%">%</button>
+        <button id="parenopen" class="operator" value="(">(</button>
+        <button id="parenclose" class="operator" value=")">)</button>
+        <button id="superscript" class="operator" value="**"><em>x<sup>n</sup></em></button>
+        <button id="equals" class="operator" value="=">=</button>
+        <button id="delete" class="operator" value="del"><i class="fas fa-backspace"></i></button>
+        <button id="clear" class="operator" value="clr">C</button>
       </div>
     </div>
   </body>
