buttons / event listeners refactored, history / operate implemented

--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
     <div class="calc-body">
       <div class="screen">
         <div class="input-area">
-          <div id="active">TextHere</div>
-          <div id="warn">Warning</div>
+          <input id="active" value="">
+          <div id="warn"></div>
         </div>
-        <div class="history">
-          <span class="left">test</span><span class="right"><span>=</span><span>test</span></span>
-        </div>
+        <div class="history"></div>
       </div>
       <div class="buttons">
         <button id="one" class="number" value="1">1</button>
@@ -41,8 +39,8 @@
         <button id="parenclose" class="operator" value=")">)</button>
         <button id="superscript" class="operator" value="**"><em>x<sup>n</sup></em></button>
         <button id="equals" class="operator" value="=">=</button>
-        <button id="delete" class="operator" value="del"><i class="fas fa-backspace"></i></button>
-        <button id="clear" class="operator" value="clr">C</button>
+        <button id="delete" class="operator" value="Backspace"><i class="fas fa-backspace"></i></button>
+        <button id="clear" class="operator" value="c" alt="C">C</button>
       </div>
     </div>
   </body>
